# bob-build

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .pep8  .pre-commit-config.yaml  .pycodestyle  .travis.fix-fork.sh  .travis.install-ninja.sh  .travis.yml  Android.bp.in  BUILD.bazel  Blueprints  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  blueprint_impl.bash  bob.bash  bob.bootstrap.in  bob.bootstrap.version  bob_graph.bash  bootstrap.bash  bootstrap_androidbp.bash  bootstrap_linux.bash  bootstrap_soong.bash  bpfmt_wrapper.py  bpfmt_wrapper.sh  config.bash  context.go  context_test.go  default.xml  deps.bzl  doc.go  extensions.bzl  go.mod  go.sum  master.xml  menuconfig.bash  (+6 more)
bootstrap/: BUILD.bazel  bootstrap.go  cleanup.go  doc.go  utils.bash
bootstrap/bpdoc/: BUILD.bazel
bootstrap/bpglob/: BUILD.bazel
bootstrap/minibp/: BUILD.bazel
bpfmt/: BUILD.bazel
bpmodify/: BUILD.bazel
cmd/bob/: BUILD.bazel  main.go
config_system/: BUILD.bazel  __init__.py  general.py  generate_config_json.py  get_configs_gazelle.py  lex.py  lex_wrapper.py  log_handlers.py  mconfigfmt.py  menuconfig.py  print_user_config.py  requirements_lock.txt  requirements_test_lock.txt  syntax.py  update_config.py  warn_on.py
config_system/config_system/: __init__.py  bob.py  config_json.py  data.py  expr.py  general.py  lex.py  lex_wrapper.py  log_handlers.py  syntax.py  utils.py
config_system/tests/: BUILD.bazel  check_not_valid.test  choice.test  choice_cant_be_enabled.test  circular.test  condition.test  default.test  default_with_depends_on.test  depends_on_compare.test  disable_option_when_menu_disabled.test  run_tests.py  run_tests_formatter.py  test_expressions.py  test_get_configs_gazelle.py  test_tags.py  test_type_strictness.py  test_update_config.py
config_system/tests/formatter/: comment_whitespace.expected  comment_whitespace.test  expected.out  formatter.expected  formatter.test
core/: BUILD.bazel  alias.go  android.go  android_bp.go  android_make.go  android_test.go  androidbp_backend.go  androidbp_cclibs.go  androidbp_filegroup.go  androidbp_generated.go  androidbp_kernel_module.go  androidbp_resource.go  androidbp_test.go  androidninja_backend.go  binary.go  build.go  build_props.go  build_structs.go  common_props.go  config_props.go  defaults.go  dep_sorter.go  escape.go  external_library.go  feature.go  feature_test.go  filegroup.go  filepath.go  filepaths.go  filepaths_test.go  gen_binary.go  gen_library.go  gen_shared.go  gen_static.go  generated.go  generated_common.go  generated_props.go  glob.go  graphviz.go  import_cc.go  (+52 more)
core/backend/: BUILD.bazel  androidbp.go  androidninja.go  backend.go  linux.go  mock.go
core/config/: BUILD.bazel  config.go  environment.go
core/file/: BUILD.bazel  consumer.go  factory.go  file.go  file_test.go  filegroup.go  filegroup_test.go  provider.go  resolver.go
core/flag/: BUILD.bazel  flag.go  flag_collection.go  flag_collection_test.go  flag_consumer.go  flag_property_parser.go  flag_provider.go  flag_test.go
core/module/: BUILD.bazel  module.go
core/tag/: BUILD.bazel  tag.go
core/toolchain/: BUILD.bazel  armclang.go  clang.go  custom.go  customlinker.go  gnu.go  linker.go  toolchain.go  xcode.go  xcode_linker.go
core/toolchain/mapper/: BUILD.bazel  mapper.go  mapper_test.go
gazelle/: .bazelignore  .bazelrc  BUILD.bazel  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  bob_parser.go  bob_parser_test.go  config.go  config_test.go  configure.go  deps.bzl  fix.go  flags.go  generate.go  generator.go  go.mod  go.sum  imports.go  kinds.go  language.go  mconfig_parser.go  merge.go  module.go  plugin.go  registry.go  registry_test.go  resolve.go
gazelle/blueprint/builder/: BUILD.bazel  builder.go
gazelle/blueprint/parser/: BUILD.bazel  parser.go  parser_test.go
gazelle/common/: BUILD.bazel  common.go
gazelle/config/: BUILD.bazel  config.go
gazelle/info/: BUILD.bazel  info.go
gazelle/kinds/: BUILD.bazel  kinds.go
gazelle/logic/: BUILD.bazel  flatten.go  flatten_test.go  logic.go
gazelle/logic/builder/: BUILD.bazel  builder.go
gazelle/mapper/: BUILD.bazel  mapper.go  mapper_test.go
gazelle/mconfig/builder/: BUILD.bazel  builder.go
gazelle/mconfig/parser/: BUILD.bazel  config_test.go  parser.go
gazelle/module/: BUILD.bazel  module.go
gazelle/patches/blueprint/: export_module_pos.patch
gazelle/patches/gazelle/: 0001-Add-SortedStrings-and-UnsortedStrings-expression-val.patch  0002-Add-the-new-Merger-interface.patch  0003-Implement-Merge-for-SortedStrings-UnsortedStrings.patch  0004-Expose-the-MergeList-MergeDict-helpers.patch  0005-fix-correct-rule-s-kind-stmt.patch
gazelle/registry/: BUILD.bazel  registry.go  registry_test.go
gazelle/tests/: BUILD.bazel  update_failed.sh
gazelle/tests/all_known_modules/: BUILD.out  build.bp  expectedStderr.txt
gazelle/tests/example/: Mconfig  README.md  build.bp  expectedStderr.txt
gazelle/tests/generate_filegroup/: BUILD.out  Mconfig  README.md  build.bp  expectedStderr.txt
gazelle/tests/generate_library/: BUILD.in  BUILD.out  README.md  build.bp  expectedStderr.txt
gazelle/tests/ignore_list/: BUILD.in  BUILD.out  README.md  build.bp  expectedStderr.txt
gazelle/tests/integration_tests/: MODULE.bazel  README.md  (+1 more)
gazelle/types/: BUILD.bazel  types.go
gazelle/util/: BUILD.bazel  util.go  util_test.go
gendiffer/: BUILD.bazel  README.md  bob.android.config  bob.android.config.json  bob.android_oot.config  bob.android_oot.config.json  bob.linux.config  bob.linux.config.json  gendiffer.bzl  gendiffer.go
gendiffer/tests/: BUILD.bazel  README.md  update_failed.sh
gotestmain/: BUILD.bazel
gotestrunner/: BUILD.bazel
loadplugins/: BUILD.bazel
microfactory/: BUILD.bazel  microfactory.bash  microfactory.go
microfactory/main/: BUILD.bazel
parser/: BUILD.bazel  parser_test.go
patches/: BUILD.bazel
patches/blueprint/: 0001-feat-visit-modules-with-position.patch  0002-fix-remove-blueprint-dep.patch  0003-fix-remove-dupbuild-flag.patch
pathtools/: BUILD.bazel
proptools/: BUILD.bazel  escape.go  unpack.go  unpack_test.go
(+691 files in other folders)
