module(
    name = "blueprint",
    version = "0.0.1",
    repo_name = "com_github_google_blueprint",
)

print("WARNING: The `blueprint` Bazel module is still highly experimental and subject to change at any time!")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(
    version = "1.18",
)
use_repo(
    go_sdk,
    "go_toolchains",
)

register_toolchains("@go_toolchains//:all")
