module(
    name = "blueprint",
    version = "0.0.1",
    repo_name = "com_github_google_blueprint",
)

print("WARNING: The `blueprint` Bazel module is still highly experimental and subject to change at any time!")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.55.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.44.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(
    version = "1.23.4",
)
use_repo(
    go_sdk,
    "go_toolchains",
)

register_toolchains("@go_toolchains//:all")
