load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "alias.go",
        "android.go",
        "androidbp_backend.go",
        "androidbp_cclibs.go",
        "androidbp_filegroup.go",
        "androidbp_generated.go",
        "androidbp_kernel_module.go",
        "androidbp_resource.go",
        "build_structs.go",
        "config_props.go",
        "defaults.go",
        "escape.go",
        "external_library.go",
        "feature.go",
        "filegroup.go",
        "filepath.go",
        "gen_binary.go",
        "gen_library.go",
        "gen_shared.go",
        "gen_static.go",
        "generated.go",
        "graphviz.go",
        "install.go",
        "kernel_module.go",
        "late_template.go",
        "library.go",
        "linux_backend.go",
        "linux_cclibs.go",
        "linux_generated.go",
        "linux_kernel_module.go",
        "output_producer.go",
        "properties.go",
        "splitter.go",
        "standalone.go",
        "strip.go",
        "template.go",
        "toolchain.go",
    ],
    importpath = "github.com/ARM-software/bob-build/core",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/bpwriter",
        "//internal/ccflags",
        "//internal/escape",
        "//internal/fileutils",
        "//internal/graph",
        "//internal/utils",
        "//internal/warnings",
        "@com_github_google_blueprint//:blueprint",
        "@com_github_google_blueprint//bootstrap",
        "@com_github_google_blueprint//pathtools",
        "@com_github_google_blueprint//proptools",
    ],
)

go_test(
    name = "core_test",
    srcs = [
        "android_test.go",
        "androidbp_test.go",
        "feature_test.go",
        "template_test.go",
    ],
    embed = [":core"],
    deps = [
        "//internal/bpwriter",
        "//internal/utils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
