load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "alias.go",
        "android.go",
        "androidbp_backend.go",
        "androidbp_cclibs.go",
        "androidbp_filegroup.go",
        "androidbp_generated.go",
        "androidbp_kernel_module.go",
        "androidbp_resource.go",
        "binary.go",
        "build.go",
        "build_props.go",
        "build_structs.go",
        "common_props.go",
        "defaults.go",
        "dep_sorter.go",
        "escape.go",
        "external_library.go",
        "feature.go",
        "filegroup.go",
        "gen_binary.go",
        "gen_library.go",
        "gen_shared.go",
        "gen_static.go",
        "generated.go",
        "generated_common.go",
        "generated_props.go",
        "glob.go",
        "graphviz.go",
        "install.go",
        "kernel_module.go",
        "late_template.go",
        "legacy_source_props.go",
        "library.go",
        "library_shared.go",
        "library_static.go",
        "linux_backend.go",
        "linux_cclibs.go",
        "linux_generated.go",
        "linux_kernel_module.go",
        "metadata.go",
        "module_generate_source.go",
        "module_genrule.go",
        "module_gensrcs.go",
        "module_toolchain.go",
        "module_transform_source.go",
        "output_producer.go",
        "properties.go",
        "source_props.go",
        "splitter.go",
        "standalone.go",
        "strict_binary.go",
        "strict_generate_common.go",
        "strict_generate_props.go",
        "strict_library.go",
        "strict_linux_cclibs.go",
        "strip.go",
        "tagable.go",
        "template.go",
    ],
    importpath = "github.com/ARM-software/bob-build/core",
    visibility = ["//visibility:public"],
    deps = [
        "//core/backend",
        "//core/config",
        "//core/file",
        "//core/flag",
        "//core/module",
        "//core/tag",
        "//core/toolchain",
        "//internal/bpwriter",
        "//internal/ccflags",
        "//internal/escape",
        "//internal/fileutils",
        "//internal/graph",
        "//internal/utils",
        "//internal/warnings",
        "@com_github_google_blueprint//:blueprint",
        "@com_github_google_blueprint//bootstrap",
        "@com_github_google_blueprint//pathtools",
        "@com_github_google_blueprint//proptools",
    ],
)

go_test(
    name = "core_test",
    size = "small",
    srcs = [
        "android_test.go",
        "androidbp_test.go",
        "feature_test.go",
        "tagable_test.go",
        "template_test.go",
    ],
    embed = [":core"],
    deps = [
        "//core/config",
        "//internal/bpwriter",
        "//internal/utils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
