load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:exclude tests

go_library(
    name = "plugin",
    srcs = [
        "bob_parser.go",
        "config.go",
        "fix.go",
        "flags.go",
        "generate.go",
        "generator.go",
        "imports.go",
        "kinds.go",
        "language.go",
        "mconfig_parser.go",
        "merge.go",
        "module.go",
        "registry.go",
        "resolve.go",
    ],
    data = [
        "@bob//config_system:get_configs_gazelle",
    ],
    importpath = "github.com/ARM-software/bob-build/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bob//core",
        "@bob//core/file",
        "@bob//core/toolchain",
        "@bob//internal/utils",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_google_blueprint//:blueprint",
        "@com_github_google_blueprint//parser",
        "@com_github_google_blueprint//proptools",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [":plugin"],
    visibility = ["//tests:__pkg__"],
)

# Run this target to run the plugin.
# This is a seperate target to the root level plugin to test the bob_build
# lang implemenation in isolation.
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_test(
    # TODO: The name should be `plugin_test`
    name = "gazelle_test",
    srcs = [
        "bob_parser_test.go",
        "config_test.go",
        "registry_test.go",
    ],
    # TODO: we need to keep here as it sets the embed to `:gazelle` incorrectly.
    embed = [":plugin"],  # keep
    deps = [
        "@bazel_gazelle//label:go_default_library",
        "@bob//core",
        "@com_github_google_blueprint//:blueprint",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
