load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# To update build files for the plugin itself run `bazelisk run @bob//:gazelle`
# gazelle:prefix github.com/ARM-software/bob-build/gazelle
# gazelle:exclude tests
# gazelle:build_file_name BUILD.bazel
# gazelle:resolve go github.com/stretchr/testify/assert @com_github_stretchr_testify//assert:go_default_library
# gazelle:resolve go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library

go_library(
    name = "plugin",
    srcs = [
        "configure.go",
        "fix.go",
        "flags.go",
        "generate.go",
        "imports.go",
        "kinds.go",
        "language.go",
        "resolve.go",
    ],
    importpath = "github.com/ARM-software/bob-build/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "//blueprint/parser",
        "//common",
        "//config",
        "//kinds",
        "//mconfig/parser",
        "//types",
        "//util",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_google_blueprint//:blueprint",
        "@com_github_google_blueprint//parser",
        "@com_github_google_blueprint//proptools",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [":plugin"],
    visibility = ["//tests:__pkg__"],
)

# Run this target to run the plugin.
# This is a seperate target to the root level plugin to test the bob_build
# lang implemenation in isolation.
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
