module(
    name = "bob-gazelle",
    version = "0.0.1",
)

print("WARNING: The `bob-gazelle` Bazel module is still highly experimental and subject to change at any time. Only use it to try out bzlmod for now.")

# NOTE: https://github.com/bazelbuild/bazel/issues/17271
local_path_override(
    module_name = "bob-build",
    path = "..",
)

bazel_dep(name = "bob-build", version = "0.0.1", repo_name = "bob")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.30.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# NOTE: https://github.com/bazelbuild/bazel-gazelle/issues/1469
go_sdk.download(
    version = "1.18",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_stretchr_testify",
)

blueprint = use_extension("@bob//:extensions.bzl", "blueprint")
use_repo(blueprint, "com_github_google_blueprint")
