load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gotestrunner_lib",
    srcs = ["gotestrunner.go"],
    importpath = "github.com/google/blueprint/gotestrunner",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gotestrunner",
    embed = [":gotestrunner_lib"],
    visibility = ["//visibility:public"],
)
