load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "microfactory",
    srcs = ["microfactory.go"],
    importpath = "github.com/google/blueprint/microfactory",
    visibility = ["//visibility:public"],
)

# TODO: FIX ME!
# go_test(
#     name = "microfactory_test",
#     srcs = ["microfactory_test.go"],
#     embed = [":microfactory"],
# )
