load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "ast.go",
        "modify.go",
        "parser.go",
        "printer.go",
        "sort.go",
    ],
    importpath = "github.com/google/blueprint/parser",
    visibility = ["//visibility:public"],
)

go_test(
    name = "parser_test",
    size = "small",
    srcs = [
        "modify_test.go",
        "parser_test.go",
        "printer_test.go",
    ],
    embed = [":parser"],
)
