load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "minibp_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/blueprint/bootstrap/minibp",
    visibility = ["//visibility:private"],
    deps = [
        "//:blueprint",
        "//bootstrap",
    ],
)

go_binary(
    name = "minibp",
    embed = [":minibp_lib"],
    visibility = ["//visibility:public"],
)
