load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bob_lib",
    srcs = ["main.go"],
    importpath = "github.com/ARM-software/bob-build/cmd/bob",
    visibility = ["//visibility:private"],
    deps = [
        "//core",
        "//internal/utils",
    ],
)

go_binary(
    name = "bob",
    embed = [":bob_lib"],
    visibility = ["//visibility:public"],
)

native_binary(
    name = "bazel-bob-build",
    src = ":bob",
    visibility = ["//visibility:public"],
)
