load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backend",
    srcs = [
        "androidbp.go",
        "backend.go",
        "linux.go",
        "mock.go",
    ],
    importpath = "github.com/ARM-software/bob-build/core/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//core/config",
        "//core/toolchain",
        "//internal/utils",
        "//internal/warnings",
        "@com_github_google_blueprint//:blueprint",
        "@com_github_google_blueprint//proptools",
    ],
)
