load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = [
        "file.go",
        "filegroup.go",
    ],
    importpath = "github.com/ARM-software/bob-build/core/file",
    visibility = ["//visibility:public"],
    deps = [
        "//core/backend",
        "//core/toolchain",
    ],
)

go_test(
    name = "file_test",
    srcs = ["file_test.go"],
    embed = [":file"],
    deps = [
        "//core/backend",
        "//core/config",
        "@com_github_stretchr_testify//assert",
    ],
)
