load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = [
        "consumer.go",
        "file.go",
        "filegroup.go",
        "provider.go",
    ],
    importpath = "github.com/ARM-software/bob-build/core/file",
    visibility = ["//visibility:public"],
    deps = [
        "//core/backend",
        "//core/toolchain",
        "@com_github_google_blueprint//:blueprint",
    ],
)

go_test(
    name = "file_test",
    srcs = [
        "file_test.go",
        "filegroup_test.go",
    ],
    embed = [":file"],
    deps = [
        "//core/backend",
        "//core/config",
        "@com_github_stretchr_testify//assert",
    ],
)
