load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "flag",
    srcs = [
        "flag.go",
        "flag_collection.go",
        "flag_consumer.go",
        "flag_property_parser.go",
        "flag_provider.go",
    ],
    importpath = "github.com/ARM-software/bob-build/core/flag",
    visibility = ["//visibility:public"],
    deps = [
        "//core/backend",
        "@com_github_google_blueprint//:blueprint",
    ],
)

go_test(
    name = "flag_test",
    srcs = [
        "flag_collection_test.go",
        "flag_test.go",
    ],
    embed = [":flag"],
    deps = [
        "//core/backend",
        "//core/config",
        "@com_github_stretchr_testify//assert",
    ],
)
