load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/ARM-software/bob-build/gazelle/config",
    visibility = ["//visibility:public"],
    deps = [
        "//blueprint/builder",
        "//blueprint/parser",
        "//logic/builder",
        "//mapper",
        "//mconfig/builder",
        "//mconfig/parser",
    ],
)
