load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logic",
    srcs = [
        "flatten.go",
        "logic.go",
    ],
    importpath = "github.com/ARM-software/bob-build/gazelle/logic",
    visibility = ["//visibility:public"],
)

go_test(
    name = "logic_test",
    size = "small",
    srcs = [
        "flatten_test.go",
        "logic_test.go",
    ],
    embed = [":logic"],
)
