load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mapper",
    srcs = ["mapper.go"],
    importpath = "github.com/ARM-software/bob-build/gazelle/mapper",
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//label:go_default_library"],
)

go_test(
    name = "mapper_test",
    srcs = ["mapper_test.go"],
    embed = [":mapper"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
